[package]
name = "t1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = "1" 
serde_json = "1.0"
tokio-stream = "0.1.12"
actix-web = "4.0.0-beta.15"
actix-rt = "2.5.0"
actix-cors = "0.6.4"
# wasm-bindgen = "0.2.63"
