[package]
name = "wasm-project3"
version = "0.1.0"
authors = ["AshMarti <andavis@ualberta.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
primal = "0.2"
primes = "0.3.0"
mut_static = "5.0.0"
lazy_static = "1.4.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
html-macro = "0.2.2"


tokio = "1"
chrono = "0.4"
serde = "1"
tokio-stream = "0.1.12"
js-sys = "0.3.61"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
